--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ node_modules/
 /blob-report/
 /playwright/.cache/
 .DS_Store
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
